Bug 214487 - Fixes to match BaseAudioContext.idl to spec
Summary: Fixes to match BaseAudioContext.idl to spec
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Web Audio (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Clark Wang
URL:
Keywords: InRadar
Depends on:
Blocks: 212611
  Show dependency treegraph
 
Reported: 2020-07-17 11:23 PDT by Clark Wang
Modified: 2020-07-20 14:53 PDT (History)
10 users (show)

See Also:


Attachments
Patch (10.11 KB, patch)
2020-07-17 14:18 PDT, Clark Wang
no flags Details | Formatted Diff | Diff
Patch (10.11 KB, patch)
2020-07-17 14:27 PDT, Clark Wang
no flags Details | Formatted Diff | Diff
Patch (13.83 KB, patch)
2020-07-20 09:26 PDT, Clark Wang
no flags Details | Formatted Diff | Diff
Patch (13.96 KB, patch)
2020-07-20 12:11 PDT, Clark Wang
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Clark Wang 2020-07-17 11:23:06 PDT
Added in small fixes to bring BaseAudioContext.idl closer to spec. Edited a test file for PannerNode constructor to match spec and Chrome / Firefox.
Comment 1 Clark Wang 2020-07-17 14:18:08 PDT
Created attachment 404592 [details]
Patch
Comment 2 Clark Wang 2020-07-17 14:27:07 PDT
Created attachment 404593 [details]
Patch
Comment 3 Chris Dumez 2020-07-17 14:54:43 PDT
Comment on attachment 404593 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=404593&action=review

> Source/WebCore/Modules/webaudio/BaseAudioContext.cpp:-526
> -    return PannerNode::create(*this, sampleRate());

So who is using this old factory / constructor now? If no one is, then why aren't you removing it in this patch? We don't want to keep dead code around, especially dead code that is not spec-compliant.
Comment 4 Clark Wang 2020-07-17 16:44:12 PDT
(In reply to Chris Dumez from comment #3)
> Comment on attachment 404593 [details]
> Patch
> 
> View in context:
> https://bugs.webkit.org/attachment.cgi?id=404593&action=review
> 
> > Source/WebCore/Modules/webaudio/BaseAudioContext.cpp:-526
> > -    return PannerNode::create(*this, sampleRate());
> 
> So who is using this old factory / constructor now? If no one is, then why
> aren't you removing it in this patch? We don't want to keep dead code
> around, especially dead code that is not spec-compliant.

I think WebKitAudioPannerNode is still using PannerNodeBase, but otherwise I can remove old PannerNode constructor.
Comment 5 Clark Wang 2020-07-20 09:26:35 PDT
Created attachment 404720 [details]
Patch
Comment 6 Clark Wang 2020-07-20 12:11:45 PDT
Created attachment 404740 [details]
Patch
Comment 7 EWS 2020-07-20 14:52:55 PDT
Committed r264620: <https://trac.webkit.org/changeset/264620>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 404740 [details].
Comment 8 Radar WebKit Bug Importer 2020-07-20 14:53:16 PDT
<rdar://problem/65849546>