Fixes to match BaseAudioContext.idl to spec https://bugs.webkit.org/show_bug.cgi?id=214487

Patch by Clark Wang <clark_wang@apple.com> on 2020-07-20
Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

Re-baselined existing tests that now pass.

* web-platform-tests/webaudio/the-audio-api/the-delaynode-interface/delaynode-maxdelaylimit-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-pannernode-interface/pannernode-basic-expected.txt:

Source/WebCore:

Removed unrestricted keyword from certain attributes and parameters in BaseAudioContext.
Changed createPanner to call new PannerNode constructor, removed old PannerNode constructor.

Re-baselined existing tests that now pass.

* Modules/webaudio/BaseAudioContext.cpp:
(WebCore::BaseAudioContext::createPanner):
* Modules/webaudio/BaseAudioContext.idl:
* Modules/webaudio/PannerNode.cpp:
* Modules/webaudio/PannerNode.h:

LayoutTests:

Changed test for default panningModel to equalpower to match spec, Chrome and Firefox.

* webaudio/pannernode-basic-expected.txt:
* webaudio/pannernode-basic.html:

Canonical link: https://commits.webkit.org/227368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264620 268f45cc-cd09-0410-ab3c-d52691b4dbfc