Source/WebCore/Modules/webaudio/PannerNode.h
@@ -52,7 +52,7 @@ public:
 
 protected:
 
-    // FIXME: Remove once dependencies on old constructor are removed
+    // FIXME: Remove once dependency from prefixed version is removed
     PannerNodeBase(BaseAudioContext&, float sampleRate);
     PannerNodeBase(BaseAudioContext&);
 };
@@ -67,12 +67,6 @@ protected:
 class PannerNode final : public PannerNodeBase {
     WTF_MAKE_ISO_ALLOCATED(PannerNode);
 public:
-    // FIXME: Remove once dependencies on old constructor are removed
-    static Ref<PannerNode> create(BaseAudioContext& context, float sampleRate)
-    {
-        return adoptRef(*new PannerNode(context, sampleRate));
-    }
-
     static ExceptionOr<Ref<PannerNode>> create(BaseAudioContext&, const PannerOptions& = { });
 
     virtual ~PannerNode();
@@ -142,8 +136,6 @@ public:
     double latencyTime() const override { return m_panner ? m_panner->latencyTime() : 0; }
 
 private:
-    // FIXME: Remove once dependencies on old constructor are removed
-    PannerNode(BaseAudioContext&, float sampleRate);
     PannerNode(BaseAudioContext&, const PannerOptions&);
 
     // Returns the combined distance and cone gain attenuation.
